Refactoring bundle "text": changed the tags to clear ones.

--- a/src/main/resources/text_ru_RU.properties
+++ b/src/main/resources/text_ru_RU.properties
@@ -1,168 +1,168 @@
 help_add=добавить [д] - добавить запись в таблицу
-help_bt=потегу <тег> [тг <тег>] - поиск в таблице по тегу %s
-help_cp=копировать <№> <заметка / логин / пароль> [кп <№> <з / л / п>] - скопировать данные из записи %s
-help_datatypes=типы данных: заметка = з , логин = л , пароль = п , тег = т
-help_del=удалить <№> [уд <№>] - удалить запись из таблицы %s
-help_ed=изменить <№> <заметка / логин / пароль / тег> <новые данные> [изм <№> <з / л / п / т> <новые данные>] - изменить данные в записи %s
-help_h=помощь [h] - показать список всех команд
+help_byTag=потегу <тег> [тг <тег>] - поиск в таблице по тегу %s
+help_copy=копировать <№> <заметка / логин / пароль> [кп <№> <з / л / п>] - скопировать данные из записи %s
+help_dataTypes=типы данных: заметка = з , логин = л , пароль = п , тег = т
+help_delete=удалить <№> [уд <№>] - удалить запись из таблицы %s
+help_edit=изменить <№> <заметка / логин / пароль / тег> <новые данные> [изм <№> <з / л / п / т> <новые данные>] - изменить данные в записи %s
+help_help=помощь [h] - показать список всех команд
 help_title_files=## Работа с Passtable файлами ##
-help_heg=ксп - показать список всех команд с примерами
-help_language=en / ru - сменить язык приложения (change app language)
+help_helpWithExamples=ксп - показать список всех команд с примерами
+help_changeLanguage=en / ru - сменить язык приложения (change app language)
 help_new=новый - создать новый файл
-help_op=открыть <путь> [откр <путь>] - открыть существующий файл %s
+help_open=открыть <путь> [откр <путь>] - открыть существующий файл %s
 help_rollback=вернуться - вернуться к последней сохраненной версии файла
-help_s=поиск <данные> [п <данные>] - поиск в таблице по заметке и логину %s
-help_saveas=сохркак - сохранить изменения в другом файле с изменением основного пароля
-help_sv=сохранить [сохр] - сохранить изменения в файле
-help_t=таблица [т] - отобразить таблицу
+help_search=поиск <данные> [п <данные>] - поиск в таблице по заметке и логину %s
+help_saveAs=сохркак - сохранить изменения в другом файле с изменением основного пароля
+help_save=сохранить [сохр] - сохранить изменения в файле
+help_table=таблица [т] - отобразить таблицу
 help_tags=теги: красный = к , зеленый = з , синий = с , желтый = ж , фиолетовый = ф
 help_title_table=## Работа с таблицей ##
 help_title_abb=## Сокращения ##
-c_heg=ксп
+c_helpWithExamples=ксп
 c_help=помощь
 c_about=инфо
 c_version=версия
-c_v=вер
+c_version2=вер
 c_en=en
 c_ru=ru
 c_new=новый
 c_open=открыть
-c_op=откр
+c_open2=откр
 c_save=сохранить
-c_sv=сохр
-c_saveas=сохркак
+c_save2=сохр
+c_saveAs=сохркак
 c_rollback=вернуться
 c_add=добавить
 c_edit=изменить
-c_ed=изм
+c_edit2=изм
 c_delete=удалить
-c_del=уд
+c_delete2=уд
 c_copy=копировать
-c_cp=кп
+c_copy2=кп
 c_search=поиск
-c_s=п
-c_bytag=потегу
-c_bt=тг
+c_search2=п
+c_byTag=потегу
+c_byTag2=тг
 c_table=таблица
-c_t=т
+c_table2=т
 c_clear=очистить
-c_cls=оч
+c_clear2=оч
 dt_note=заметка
-dt_n=з
+dt_note2=з
 dt_username=логин
-dt_u=л
+dt_username2=л
 dt_password=пароль
-dt_p=п
+dt_password2=п
 dt_tag=тег
-dt_t=т
+dt_tag2=т
 tg_red=красный
-tg_r=к
+tg_red2=к
 tg_green=зеленый
-tg_g=з
+tg_green2=з
 tg_blue=синий
-tg_b=с
+tg_blue2=с
 tg_yellow=желтый
-tg_y=ж
+tg_yellow2=ж
 tg_purple=фиолетовый
-tg_p=ф
+tg_purple2=ф
 c_add2=д
-msg_lang=Для сообщений и команд установлен русский язык.
-msg_unknown=Неизвестная команда. Введите "помощь", чтобы отобразить список команд.
-msg_namefile=Введите имя или путь: 
-msg_primarypassword=Введите основной пароль: 
-msg_primarypasswordnew=Введите основной пароль (A..z, цифры, символы): 
-msg_confirm=Подтвердите: 
-msg_dontmatch=Пароли не совпадают! Введите пароль повторно.
-msg_noentries=* Нет ни одной записи *
+msg_language=Для сообщений и команд установлен русский язык.
+msg_unknownCmd=Неизвестная команда. Введите "помощь", чтобы отобразить список команд.
+edit_fileName=Введите имя или путь: 
+edit_primaryPassword=Введите основной пароль: 
+edit_primaryPasswordNew=Введите основной пароль (A..z, цифры, символы): 
+edit_primaryPasswordConfirm=Подтвердите: 
+msg_passwordsDoNotMatch=Пароли не совпадают! Введите пароль повторно.
+tb_noEntries=* Нет ни одной записи *
 edit_note=Введите заметку: 
 edit_username=Введите логин: 
 edit_password=Введите пароль: 
-edit_notelatin=Введите заметку (A..z, цифры, символы): 
-edit_usernamelatin=Введите логин (A..z, цифры, символы): 
-edit_passwordlatin=Введите пароль (A..z, цифры, символы): 
+edit_noteOnlyLatin=Введите заметку (A..z, цифры, символы): 
+edit_usernameOnlyLatin=Введите логин (A..z, цифры, символы): 
+edit_passwordOnlyLatin=Введите пароль (A..z, цифры, символы): 
 edit_confirm=Подтвердите (оставьте пустым для пропуска): 
 edit_tag=Добавить тег? (красный / зеленый / синий / желтый / фиолетовый): 
-msg_invalid=Неверная команда. Введите "помощь", чтобы отобразить список команд.
-help_q=выход [вв] - завершить работу с приложением
+msg_invalidCmd=Неверная команда. Введите "помощь", чтобы отобразить список команд.
+help_quit=выход [вв] - завершить работу с приложением
 c_quit=выход
-c_q=вв
+c_quit2=вв
 title_id=№
 title_note=Заметка
 title_username=Логин
 title_password=Пароль
 title_tag=Тег
-yes=да
-no=нет
-tb_defaulttitle=Без названия
-msg_unsaved=!! Несохраненные изменения !!\nНапечатайте "сохранить" для сохранения изменений или напечатайте "вернуться" для отмены всех изменений.
+tb_hasPassword=есть
+tb_noPassword=нет
+tb_defaultTitle=Без названия
+msg_unsavedChanges=!! Несохраненные изменения !!\nНапечатайте "сохранить" для сохранения изменений или напечатайте "вернуться" для отмены всех изменений.
 c_yes2=д
 c_no2=н
 c_cancel=отмена
-msg_saveornot=У вас есть несохраненные изменения! Сохранить? (д / н / отмена)
-msg_emptynamefile=Путь или имя файла не может быть пустым!
-msg_charerror=Имя файла не должно содержать недопустимые символы: %s
-msg_whitespacenamefile=Имя файла не должно начинаться с пробела!
-msg_invalidwordnamefile=Имя файла является недопустимым словом для Windows!\nНедопустимые слова: %s
-msg_longnamefile=Имя файла слишком длинное!
-msg_emptyprimarypassword=Основной пароль не может быть пустым!
-msg_slashprimarypassword=К сожалению, основной пароль не может начинаться с косой черты!
-msg_longprimarypassword=Основной пароль слишком длинный (макс. 32 символа)!
-msg_invalidcharprimarypassword=Основной пароль содержит недопустимые символы!\nРазрешённые символы:\n%s
+msg_unsavedChangesProtection=У вас есть несохраненные изменения! Сохранить? (д / н / отмена)
+msg_nameEmpty=Путь или имя файла не может быть пустым!
+msg_nameInvalidChars=Имя файла не должно содержать недопустимые символы: %s
+msg_nameSpaceChar=Имя файла не должно начинаться с пробела!
+msg_nameInvalidWord=Имя файла является недопустимым словом для Windows!\nНедопустимые слова: %s
+msg_nameLong=Имя файла слишком длинное!
+mag_primaryEmpty=Основной пароль не может быть пустым!
+msg_primaryForwardSlash=К сожалению, основной пароль не может начинаться с косой черты!
+msg_primaryLong=Основной пароль слишком длинный (макс. 32 символа)!
+msg_primaryInvalidChars=Основной пароль содержит недопустимые символы!\nРазрешённые символы:\n%s
 msg_exception=Возникло необработанное исключение :(
 msg_success=Успешно!
-msg_invalidpass=Неверный пароль!
-msg_openfail=Не удалось открыть файл!
-msg_verfail=Этот файл был создан в более поздней версии приложения и не может быть открыт. Обновите приложение.
-msg_filecorrupted=Файл повреждён и не может быть открыт!
-msg_errsave=Изменения не были сохранены!!! %s
-msg_errdirectory=Не удалось сохранить файл в указанной директории!\nФайл был сохранен в директории приложения.
-msg_errencrypt=Ошибка шифрования. Вероятно, это вызвано использованием неподдерживаемого символа.
-msg_errwrite=Ошибка записи данных в файл.
-msg_enternewdata=Введите новый путь и основной пароль...
-msg_tabchar=Запрещено использование символа табуляции!
+msg_incorrectPassword=Неверный пароль!
+msg_openFail=Не удалось открыть файл!
+msg_needAppUpdate=Этот файл был создан в более поздней версии приложения и не может быть открыт. Обновите приложение.
+msg_fileDamaged=Файл повреждён и не может быть открыт!
+msg_saveError=Изменения не были сохранены!!! %s
+msg_savedToAppDir=Не удалось сохранить файл в указанной директории!\nФайл был сохранен в директории приложения.
+msg_encryptionError=Ошибка шифрования. Вероятно, это вызвано использованием неподдерживаемого символа.
+msg_writingToFileError=Ошибка записи данных в файл.
+msg_enterNewPathAndPassword=Введите новый путь и основной пароль...
+msg_tabCharError=Запрещено использование символа табуляции!
 msg_canceled=Отменено!
-msg_notag=Записи не был присвоен тег.
-msg_noentry=Записи с таким номером не существует!
+msg_entryNoTag=Записи не был присвоен тег.
+msg_noEntry=Записи с таким номером не существует!
 msg_copied=Скопировано!
-msg_emptysearch=Пустой поисковый запрос!
-msg_unknowntag=Неверный тег.
+msg_emptySearchQuery=Пустой поисковый запрос!
+msg_invalidTag=Неверный тег.
 c_license=соглашение
 help_license=соглашение - показать лицензионное соглашение
-msg_windows=К сожалению, добавление записей, содержащих нелатинские символы, через это приложение в Windows небезопасно. Используйте приложение Passtable для Windows, чтобы сделать это.
+msg_nonLatinProblemWindows=К сожалению, добавление записей, содержащих нелатинские символы, через это приложение в Windows небезопасно. Используйте приложение Passtable для Windows, чтобы сделать это.
 c_password=пароль
-c_ps=пр
-help_ps=пароль <№> [пр <№>] - показать пароль записи %s
+c_password2=пр
+help_password=пароль <№> [пр <№>] - показать пароль записи %s
 help_abbreviated=[..] - альтернативная версия команды
-msg_erradd=Отменено! Запись должна содержать заметку или логин с паролем.
-msg_nousername=Запись не содержит логина!
-msg_nopass=Запись не содержит пароля!
+msg_addingError=Отменено! Запись должна содержать заметку или логин с паролем.
+msg_noUsername=Запись не содержит логина!
+msg_noPassword=Запись не содержит пароля!
 key_space=пробел
 header_version=версия: %s
-header_projectpage=Страница проекта: %s
-header_projectrepo=Репозиторий проекта: %s
+header_projectPage=Страница проекта: %s
+header_projectRepo=Репозиторий проекта: %s
 header_h=Введите "h", чтобы отобразить список команд.
 header_ru=Введите "en", чтобы сменить язык на Английский (English).
 header_license=Введите "соглашение", чтобы прочитать лицензионное соглашение.
-msg_checkingupdates=Проверка обновлений...
-msg_uptodate=Приложение находится в актуальном состоянии.
-msg_failconnect=Не удалось подключиться к серверу!
-msg_newversion=Доступна новая версия! Загрузить? [д/Н]
+msg_checkingUpdates=Проверка обновлений...
+msg_upToDate=Приложение находится в актуальном состоянии.
+msg_connectFail=Не удалось подключиться к серверу!
+msg_newVersionAvailable=Доступна новая версия! Загрузить? [д/Н]
 msg_downloading=Загрузка...
-msg_dlsuccess=Успешно! Откройте "%s" в директории приложения для продолжения работы.
-msg_dlfail=Не удалось загрузить!
-msg_showcontents=Напечатайте "показать <№>", чтобы показать всё содержимое записи.
-msg_showpassword=напечатайте "пр %s", чтобы показать пароль
+msg_downloadSuccess=Успешно! Откройте "%s" в директории приложения для продолжения работы.
+msg_downloadFail=Не удалось загрузить!
+msg_showContents=Напечатайте "показать <№>", чтобы показать всё содержимое записи.
+msg_showPassword=напечатайте "пр %s", чтобы показать пароль
 c_show=показать
-c_sh=пк
-help_sh=показать <№> [пк <№>] - показать всё содержимое записи %s
-c_lnp=лнп
-help_lnp=лнп <№> - Log'n'Pass: скопировать логин, затем пароль %s
-msg_lnpcanceled=Отменено! Запись содержит только заметку!
-msg_lnpusername=Логин скопирован! Нажмите Enter, чтобы скопировать пароль.
-msg_lnppassword=Пароль скопирован! Нажмите Enter, чтобы очистить буфер обмена и продолжить.
-msg_errcopy=Используемая ОС не позволяет приложениям записывать данные в буфер обмена, или необходимые библиотеки JRE для этого действия не были найдены (возможная причина: установлен только пакет "openjdk-8-jre-headless", установите полный пакет "openjdk-8-jre").
-msg_errlnp=Система Log'n'Pass недоступна! Причина: %s
-msg_passwordmac=В macOS вы не можете добавить запись с паролем, содержащим нелатинские символы. Однако, вы можете установить любой пароль при редактировании записи.
+c_show2=пк
+help_show=показать <№> [пк <№>] - показать всё содержимое записи %s
+c_logPass=лнп
+help_logPass=лнп <№> - Log'n'Pass: скопировать логин, затем пароль %s
+msg_logPassCanceled=Отменено! Запись содержит только заметку!
+msg_logPassUsername=Логин скопирован! Нажмите Enter, чтобы скопировать пароль.
+msg_logPassPassword=Пароль скопирован! Нажмите Enter, чтобы очистить буфер обмена и продолжить.
+msg_copyError=Используемая ОС не позволяет приложениям записывать данные в буфер обмена, или необходимые библиотеки JRE для этого действия не были найдены (возможная причина: установлен только пакет "openjdk-8-jre-headless", установите полный пакет "openjdk-8-jre").
+msg_logPassUnavailable=Система Log'n'Pass недоступна! Причина: %s
+msg_passwordProblemMac=В macOS вы не можете добавить запись с паролем, содержащим нелатинские символы. Однако, вы можете установить любой пароль при редактировании записи.
 help_example=(пример: %s)
 about_jvmApp=JVM Приложение
 about_version=Версия: %s
