Added protection against ASCII characters x00-x1F.

--- a/src/main/resources/text_ru_RU.properties
+++ b/src/main/resources/text_ru_RU.properties
@@ -100,7 +100,8 @@ help_title_files=## Работа с Passtable файлами ##
 help_title_table=## Работа с таблицей ##
 key_space=пробел
 mag_primaryEmpty=Основной пароль не может быть пустым!
-msg_addingError=Отменено! Запись должна содержать заметку или логин с паролем.
+msg_addingDataError=Отменено! Запись должна содержать заметку или логин с паролем.
+msg_addingInvalidChars=Отменено! Некоторые данные содержат недопустимые символы.
 msg_canceled=Отменено!
 msg_checkingUpdates=Проверка обновлений...
 msg_connectFail=Не удалось подключиться к серверу!
