Refactoring of Processor. Combined information printers into one object.

--- a/src/main/resources/text_ru_RU.properties
+++ b/src/main/resources/text_ru_RU.properties
@@ -149,7 +149,7 @@ msg_success=Успешно!
 msg_tabCharError=Запрещено использование символа табуляции!
 msg_unknownCmd=Неизвестная команда. Введите "помощь", чтобы отобразить список команд.
 msg_unsavedChanges=!! Несохраненные изменения !!\nНапечатайте "сохранить" для сохранения изменений или напечатайте "вернуться" для отмены всех изменений.
-msg_unsavedChangesProtection=У вас есть несохраненные изменения! Сохранить? (д / н / отмена)
+msg_unsavedChangesProtection=У вас есть несохраненные изменения! Сохранить? [д/н/Отмена]
 msg_upToDate=Приложение находится в актуальном состоянии.
 msg_writingToFileError=Ошибка записи данных в файл.
 tb_defaultTitle=Без названия
