Testing: Added missing commands to the list.

--- a/src/main/resources/text_ru_RU.properties
+++ b/src/main/resources/text_ru_RU.properties
@@ -71,9 +71,11 @@ header_projectRepo=Репозиторий проекта: %s
 header_ru=Введите "en", чтобы сменить язык на Английский (English).
 header_version=версия: %s
 help_abbreviated=[..] - альтернативная версия команды
+help_about=инфо - показать информацию о приложении
 help_add=добавить [д] - добавить запись в таблицу
 help_byTag=потегу <тег> [тг <тег>] - поиск в таблице по тегу %s
 help_changeLanguage=en / ru - сменить язык приложения (change app language)
+help_clear=очистить [оч] - очистить вывод консоли
 help_copy=копировать <№> <заметка / логин / пароль> [кп <№> <з / л / п>] - скопировать данные из записи %s
 help_dataTypes=типы данных: заметка = з , логин = л , пароль = п , тег = т
 help_delete=удалить <№> [уд <№>] - удалить запись из таблицы %s
@@ -97,6 +99,7 @@ help_tags=теги: красный = к , зеленый = з , синий = с 
 help_title_abb=## Сокращения ##
 help_title_files=## Работа с Passtable файлами ##
 help_title_table=## Работа с таблицей ##
+help_version=версия [вер] - посмотреть версию приложения
 key_space=пробел
 mag_primaryEmpty=Основной пароль не может быть пустым!
 msg_addingDataError=Отменено! Запись должна содержать заметку или логин с паролем.
